[#140782689] Solved: Unable to update certain products due to invalid character in the product name

--- a/CalOrdersJET/src/js/views/productAdd.html
+++ b/CalOrdersJET/src/js/views/productAdd.html
@@ -82,7 +82,7 @@ THE SOFTWARE.
                                                 component: 'ojInputText', 
                                                 value:productName, required: true,
                                                 validators: [{type: 'regExp', options: {
-                                                    pattern: '[:\\-!@#$%^&*,?.;:()+={}<>\'\&quot\\w\\s]{1,128}',
+                                                    pattern: '[:\\-!@#$%^&*,?.;:()+={}<>®\'\&quot\\w\\s]{1,128}',
                                                     hint: 'Enter a product name that is less than 128 alphanumeric characters (including the following characters :-!@#$%^&*();?+={}<>,\'\&quot',
                                                     messageDetail: 'The product name must be less than 128 alphanumeric characters (including the following characters :-!@#$%^&*();?+={}<>,\'\&quot'} },
                                                     validateProductName],
