Updated to not show the Cart Summary for admin (small screen).  Also fixed issues on the Product Detail page on text overlap for the specification section.

--- a/CalOrdersJET/src/js/views/productDetail.html
+++ b/CalOrdersJET/src/js/views/productDetail.html
@@ -141,37 +141,37 @@
                 </div>
                 <div id="tabs-2">
                     <div class="oj-flex">
-                        <div class="oj-flex-item oj-sm-2 product-detail-specification-label">Vendor:</div> 
-                        <div class="oj-flex-item product-detail-value" data-bind="text: product().vndName"></div>
+                        <div class="oj-flex-item oj-sm-6 oj-md-2 product-detail-specification-label">Vendor:</div> 
+                        <div class="oj-flex-item oj-sm-6 oj-md-10 product-detail-value" data-bind="text: product().vndName"></div>
                     </div>
 
                     <div class="oj-flex">
-                        <div class="oj-flex-item oj-sm-2 product-detail-specification-label">SKU:</div> 
-                        <div class="oj-flex-item product-detail-value" data-bind="text: product().prdSku"></div>
+                        <div class="oj-flex-item oj-sm-6 oj-md-2 product-detail-specification-label">SKU:</div> 
+                        <div class="oj-flex-item oj-sm-6 oj-md-10 product-detail-value" data-bind="text: product().prdSku"></div>
                     </div>
                     <div class="oj-flex">
-                        <div class="oj-flex-item oj-sm-2 product-detail-specification-label">Contract Line Item:</div> 
-                        <div class="oj-flex-item product-detail-value" data-bind="text: product().prdCntrLnItm"></div>
-                    </div>
-                    <div class="oj-flex">
-
-                        <div class="oj-flex-item oj-sm-2 product-detail-specification-label">Manufacturer:</div> 
-                        <div class="oj-flex-item product-detail-value" data-bind="text: product().prdOemName"></div>
+                        <div class="oj-flex-item oj-sm-6 oj-md-2 product-detail-specification-label">Contract Line Item:</div> 
+                        <div class="oj-flex-item oj-sm-6 oj-md-10 product-detail-value" data-bind="text: product().prdCntrLnItm"></div>
                     </div>
                     <div class="oj-flex">
 
-                        <div class="oj-flex-item oj-sm-2 product-detail-specification-label">Manufacturer Part Number:</div> 
-                        <div class="oj-flex-item product-detail-value" data-bind="text: product().prdOemPartNum"></div>
+                        <div class="oj-flex-item oj-sm-6 oj-md-2 product-detail-specification-label">Manufacturer:</div> 
+                        <div class="oj-flex-item oj-sm-6 oj-md-10 product-detail-value" data-bind="text: product().prdOemName"></div>
                     </div>
                     <div class="oj-flex">
 
-                        <div class="oj-flex-item oj-sm-2 product-detail-specification-label">Product Unit:</div> 
-                        <div class="oj-flex-item product-detail-value" data-bind="text: product().unitLongDesc"></div>
+                        <div class="oj-flex-item oj-sm-6 oj-md-2 product-detail-specification-label">Manufacturer Part Number:</div> 
+                        <div class="oj-flex-item oj-sm-6 oj-md-10 product-detail-value" data-bind="text: product().prdOemPartNum"></div>
                     </div>
                     <div class="oj-flex">
 
-                        <div class="oj-flex-item oj-sm-2 product-detail-specification-label">Category:</div> 
-                        <div class="oj-flex-item product-detail-value" data-bind="text: product().categoryLongDesc"></div>
+                        <div class="oj-flex-item oj-sm-6 oj-md-2 product-detail-specification-label">Product Unit:</div> 
+                        <div class="oj-flex-item oj-sm-6 oj-md-10 product-detail-value" data-bind="text: product().unitLongDesc"></div>
+                    </div>
+                    <div class="oj-flex">
+
+                        <div class="oj-flex-item oj-sm-6 oj-md-2 product-detail-specification-label">Category:</div> 
+                        <div class="oj-flex-item oj-sm-6 oj-md-10 product-detail-value" data-bind="text: product().categoryLongDesc"></div>
                     </div>
                 </div>
             </div>
