[#140806551] Order History does not sort by price correctly

--- a/CalOrdersJET/src/js/views/productSearch.html
+++ b/CalOrdersJET/src/js/views/productSearch.html
@@ -548,7 +548,7 @@
         <div>
             <div class="oj-flex oj-flex-items-pad">
                 <div class="oj-flex-item oj-sm-2" data-bind="click: $parent.navigateToProductDetail">
-                    <img style="float: left" height="100" width="100" data-bind="attr: {alt: $data['prdName'],  id: 'productImage' + $data['prdUid'], src: $parent.getPhoto($data)}"/>
+                    <img style="float: left" height="100" width="100" data-bind="attr: {alt: $data['prdName'],  id: 'productImage' + $data['prdUid'], src: $parent.getPhotoAsync($data['prdUid'])}"/>
                 </div>
 
                 <div class="oj-flex-item oj-sm-6" data-bind="click: $parent.navigateToProductDetail">
