--- a/CalOrdersJET/src/js/views/productSearch.html
+++ b/CalOrdersJET/src/js/views/productSearch.html
@@ -549,7 +549,7 @@
         <div>
             <div class="oj-flex oj-flex-items-pad">
                 <div class="oj-flex-item oj-sm-2" data-bind="click: $parent.navigateToProductDetail">
-                    <img style="float: left" height="100" width="100" data-bind="attr: {alt: $data['prdName'],  id: 'productImage' + $data['prdUid'], src: $parent.getPhotoAsync($data['prdUid'])}"/>
+                    <img style="float: left" height="100" width="100" data-bind="attr: {alt: $data['prdName'],  id: 'productImage' + $data['prdUid'], src: $parent.getPhotoAsync($data)}"/>
                 </div>
 
                 <div class="oj-flex-item oj-sm-6" data-bind="click: $parent.navigateToProductDetail">
