--- a/CalOrdersJET/src/js/views/orderDetail.html
+++ b/CalOrdersJET/src/js/views/orderDetail.html
@@ -47,6 +47,13 @@
 
     <!-- Page Content -->
     <div class="oj-panel oj-sm-flex-wrap-nowrap oj-panel-shadow-md">
+        <div class="oj-flex ">
+            <div class="oj-flex-item">
+                <a data-bind="click: navigateToOrderHistory">Back to Order History</a>
+            </div>
+        </div>
+        
+        <div class="oj-padding-vertical"></div>
 
         <div class="oj-flex">
             <div class="oj-flex-item oj-sm-2 confirmation_bold_label">Order Number:</div>
